[gd_scene load_steps=13 format=3 uid="uid://dqqojr7ehpv8o"]

[ext_resource type="Texture2D" uid="uid://dqnm6a4rq3d7a" path="res://assets/Spritesheet_UI_Flat.png" id="1_wb7ci"]
[ext_resource type="Script" path="res://resume.gd" id="1_xq8dx"]
[ext_resource type="Texture2D" uid="uid://c1ktsowq7240l" path="res://assets/homebuttonpressed.png" id="2_tkoqo"]
[ext_resource type="Texture2D" uid="uid://du5h5oi1f3myv" path="res://assets/homebutton.png" id="3_cj2us"]
[ext_resource type="Texture2D" uid="uid://lxrjj043yuq" path="res://assets/restartnewpressed.png" id="4_iy25o"]
[ext_resource type="Texture2D" uid="uid://caw3avpy4isy4" path="res://assets/restartnew.png" id="5_osl82"]
[ext_resource type="Texture2D" uid="uid://boa3uha7bkdi" path="res://assets/resumeBtn.png" id="6_dlqgi"]
[ext_resource type="Texture2D" uid="uid://j5fq8lt6wxj5" path="res://assets/resumeBtnPressed.png" id="7_7owf0"]
[ext_resource type="Texture2D" uid="uid://hssuf4726qyu" path="res://assets/exitpressed (1).png" id="8_cj2us"]
[ext_resource type="Texture2D" uid="uid://cdhadrlr7bgom" path="res://assets/exit.png" id="9_iy25o"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sss5c"]
texture = ExtResource("1_wb7ci")
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
42:3/0 = 0
43:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
40:4/0 = 0
41:4/0 = 0
42:4/0 = 0
43:4/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
38:5/0 = 0
39:5/0 = 0
40:5/0 = 0
41:5/0 = 0
42:5/0 = 0
43:5/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
39:6/0 = 0
40:6/0 = 0
41:6/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
36:7/0 = 0
37:7/0 = 0
38:7/0 = 0
39:7/0 = 0
40:7/0 = 0
41:7/0 = 0
8:8/0 = 0
9:8/0 = 0
14:8/0 = 0
15:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
36:8/0 = 0
37:8/0 = 0
38:8/0 = 0
39:8/0 = 0
40:8/0 = 0
41:8/0 = 0
8:9/0 = 0
9:9/0 = 0
14:9/0 = 0
15:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
36:9/0 = 0
37:9/0 = 0
38:9/0 = 0
39:9/0 = 0
40:9/0 = 0
41:9/0 = 0
8:10/0 = 0
9:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
36:10/0 = 0
37:10/0 = 0
38:10/0 = 0
39:10/0 = 0
40:10/0 = 0
41:10/0 = 0
8:11/0 = 0
9:11/0 = 0
14:11/0 = 0
15:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
36:11/0 = 0
37:11/0 = 0
38:11/0 = 0
39:11/0 = 0
40:11/0 = 0
41:11/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
33:12/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
33:13/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
32:14/0 = 0
33:14/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
32:15/0 = 0
33:15/0 = 0
2:10/0 = 0
2:8/0 = 0
2:6/0 = 0
2:2/size_in_atlas = Vector2i(6, 4)
2:2/0 = 0
2:7/0 = 0
2:9/0 = 0
2:11/0 = 0
2:12/0 = 0
2:13/0 = 0
3:6/0 = 0
3:7/0 = 0
3:8/0 = 0
3:9/0 = 0
3:10/0 = 0
3:11/0 = 0
3:12/0 = 0
3:13/0 = 0
4:6/0 = 0
4:7/0 = 0
5:6/0 = 0
5:7/0 = 0

[sub_resource type="TileSet" id="TileSet_37kly"]
sources/0 = SubResource("TileSetAtlasSource_sss5c")

[node name="resume" type="Sprite2D"]
script = ExtResource("1_xq8dx")

[node name="frame" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(-707, -241)
scale = Vector2(3.8864, 3.8864)
tile_map_data = PackedByteArray(0, 0, 19, 0, 8, 0, 0, 0, 2, 0, 2, 0, 0, 0, 18, 0, 8, 0, 0, 0, 2, 0, 8, 0, 0, 0)
tile_set = SubResource("TileSet_37kly")

[node name="hometBtn" type="TouchScreenButton" parent="."]
texture_filter = 5
position = Vector2(389, 292)
scale = Vector2(0.453125, 0.460938)
texture_normal = ExtResource("2_tkoqo")
texture_pressed = ExtResource("3_cj2us")

[node name="restartBtn" type="TouchScreenButton" parent="."]
texture_filter = 5
position = Vector2(483, 291)
scale = Vector2(0.453125, 0.460938)
texture_normal = ExtResource("4_iy25o")
texture_pressed = ExtResource("5_osl82")

[node name="resumeBtn" type="TouchScreenButton" parent="."]
texture_filter = 1
position = Vector2(292, 13)
scale = Vector2(0.407488, 0.411902)
texture_normal = ExtResource("6_dlqgi")
texture_pressed = ExtResource("7_7owf0")

[node name="exitBtn" type="TouchScreenButton" parent="."]
texture_filter = 5
position = Vector2(574, 291)
scale = Vector2(0.453125, 0.460938)
texture_normal = ExtResource("8_cj2us")
texture_pressed = ExtResource("9_iy25o")

[connection signal="pressed" from="hometBtn" to="." method="_on_homet_btn_pressed"]
[connection signal="pressed" from="restartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="resumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="exitBtn" to="." method="_on_exit_btn_pressed"]
